Add log-module and fix gprintf issue (stack size too small)

--- a/.cproject
+++ b/.cproject
@@ -159,19 +159,5 @@
 		</project-mappings>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
-	<storageModule moduleId="scannerConfiguration">
-		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
-		<scannerConfigBuildInfo instanceId="com.ti.ccstudio.buildDefinitions.TMS470.Debug.568296887;com.ti.ccstudio.buildDefinitions.TMS470.Debug.568296887.;com.ti.ccstudio.buildDefinitions.TMS470_GNU_7.0.exe.compilerDebug.410198972;com.ti.ccstudio.buildDefinitions.TMS470_GNU_7.0.compiler.inputType__CPP_SRCS.1352273572">
-			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="com.ti.ccstudio.project.core.CCSScannerDiscoveryProfile"/>
-		</scannerConfigBuildInfo>
-		<scannerConfigBuildInfo instanceId="com.ti.ccstudio.buildDefinitions.TMS470.Debug.568296887;com.ti.ccstudio.buildDefinitions.TMS470.Debug.568296887.;com.ti.ccstudio.buildDefinitions.TMS470_GNU_7.0.exe.compilerDebug.410198972;com.ti.ccstudio.buildDefinitions.TMS470_GNU_7.0.compiler.inputType__C_SRCS.1684409218">
-			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="com.ti.ccstudio.project.core.CCSScannerDiscoveryProfile"/>
-		</scannerConfigBuildInfo>
-		<scannerConfigBuildInfo instanceId="com.ti.ccstudio.buildDefinitions.TMS470.Debug.568296887;com.ti.ccstudio.buildDefinitions.TMS470.Debug.568296887.;com.ti.ccstudio.buildDefinitions.TMS470_GNU_7.0.exe.compilerDebug.410198972;com.ti.ccstudio.buildDefinitions.TMS470_GNU_7.0.compiler.inputType__ASM_SRCS.288867928">
-			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="com.ti.ccstudio.project.core.CCSScannerDiscoveryProfile"/>
-		</scannerConfigBuildInfo>
-		<scannerConfigBuildInfo instanceId="com.ti.ccstudio.buildDefinitions.TMS470.Debug.568296887;com.ti.ccstudio.buildDefinitions.TMS470.Debug.568296887.;com.ti.ccstudio.buildDefinitions.TMS470_GNU_7.0.exe.compilerDebug.410198972;com.ti.ccstudio.buildDefinitions.TMS470_GNU_7.0.compiler.inputType__ASM2_SRCS.1157547983">
-			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="com.ti.ccstudio.project.core.CCSScannerDiscoveryProfile"/>
-		</scannerConfigBuildInfo>
-	</storageModule>
+	<storageModule moduleId="scannerConfiguration"/>
 </cproject>
